--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -395,4 +395,17 @@
     <string name="ZIP_download_permission" context="A compressed file will be downloaded and decompressed.">The zip file will be downloaded and unzipped</string>
     <string name="ZIP_unzip_permission" context="A compressed file will be decompressed.">The zip file will be unzipped </string>
     
+    <string name="sortby_name" context="category in sort by action">By name</string>
+    <string name="sortby_name_ascending" context="sort files alphabetically ascending">ascending</string>
+    <string name="sortby_name_descending" context="sort files alphabetically descending">descending</string>
+    
+    <string name="sortby_date" context="category in sort by action">By date</string>
+    <string name="sortby_date_newest" context="sort files by date newest first">newest</string>
+    <string name="sortby_date_oldest" context="sort files by date oldest first">oldest</string>
+    
+    <string name="sortby_size" context="category in sort by action">By size</string>
+    <string name="sortby_size_largest_first" context="sort files by size largest first">largest first</string>
+    <string name="sortby_size_smallest_first" context="sort files by size smallest first">smallest first</string>
+    
+    
 </resources>
